<resources>
    <string name="app_name">control-estacionamiento-utec-electiva-I</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="home_menu">"Inicio"</string>

    <string-array name="horarios">
        <item>"6:30"</item>
        <item>"8:00"</item>
        <item>"9:30"</item>menu_admin_asignar_estacionamiento
        <item>"11:00"</item>
        <item>"13:00"</item>
        <item>"14:30"</item>
        <item>"16:00"</item>
        <item>"17:30"</item>
        <item>"18:40"</item>
        <item>"20:10"</item>
    </string-array>


    <string-array name="itemMenu">
        <item>"Inicio"</item>
        <item>"Perfil"</item>
        <item>"Asignar estacionamiento"</item>
        <item>"Reservar evento"</item>
        <item>"Reservar estacionamiento"</item>
        <item>"Asigna vigilante"</item>
        <item>"Estudiantes activos/inactivos"</item>
        <item>"Agregar usuarios"</item>
    </string-array>

    <string-array name="cantidad_parqueo">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="tipo_usuario">
        <item>"Maestro"</item>
        <item>"Administradores"</item>
        <item>"Estudiantes"</item>
        <item>"Vigilantes"</item>
    </string-array>

    <string-array name="dias">
        <item>"Domingo"</item>
        <item>"Lunes"</item>
        <item>"Martes"</item>
        <item>"Miércoles"</item>
        <item>"Jueves"</item>
        <item>"Viernes"</item>
        <item>"Sábado"</item>
    </string-array>

    <!-- String related to admin views -->
    <string name="selectedTeacher">"Seleccione un docente"</string>
    <string name="selectedBuilding">"Seleccione parqueo"</string>
    <string name="selectedScedule">"Seleccione horarios"</string>
    <string name="selectedWatchman">"Seleccione vigilante"</string>
    <string name="aceptar_admin">"Aceptar"</string>
    <string name="denegar_admin">"Denegar"</string>
    <string name="teacher_admin">"Maestro"</string>
    <string name="watchman_admin">"Vigilante"</string>
    <string name="schedule_admin">"Horarios"</string>
    <string name="parking_admin">"Parqueo"</string>
    <string name="parking_lenght_admin">"Cantidad estacionamientos"</string>
    <string name="days_admin">"Días"</string>


    <!-- Strings related to teacher's Toolbar -->
    <string name="home">Inicio</string>
    <string name="view_profile">Ver Perfil</string>
    <string name="close">Cerrar Sesion</string>

    <!-- Strings related to pantalla inicial -->
    <string name="pantalla_inicio">Pantalla de Inicio</string>
    <string name="name_title">Nombres:</string>
    <string name="name_user">Fulano de Tal</string>
    <string name="carne_title">Correo:</string>
    <string name="carne">25-1234-2015</string>
    <string name="station_name">Nombre de edifico estacionamiento:</string>
    <string name="code">BJ-21</string>
    <string name="schedule_use">Horrario de uso:</string>
    <string name="schedule">06:30 — 09:30</string>
    <string name="station_availability">Disponibilidad de estacionamiento:</string>
    <string name="state">No Disponible</string>
    <string name="btn_station">Estacionamientos Disponibles</string>

    <!-- Strings related to Estacionamiento -->
    <string name="estacionamiento">Estacionamiento</string>
    <string name="bj">BJ</string>
    <string name="sb">SB</string>
    <string name="gl">GL</string>
    <string name="tf">TF</string>
    <string name="jl">JL</string>
    <string name="gm">GM</string>
    <string name="aa">AA</string>
    <string name="cl">CL</string>
    <string name="progress">Solicitando Estacionamiento</string>

    <!-- String related to user profile -->
    <string name="change_pass">CAMBIAR CLAVE DE ACCESO</string>
    <string name="perfil_usuario">Perfil de usuario</string>
    <string name="pass_new">Escribe la nueva clave</string>
    <string name="pass_old">Escribe la actual clave</string>
    <string name="confirm">Confirmar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="confirm_pop">Confirmar cambio de clave</string>
    <string name="message_pop">Esta accion no se puede deshacer</string>
    <string name="title_activity_navegation_admin">NavegationAdmin</string>

    <string name="menu_admin_home">Inicio</string>
    <string name="menu_admin_perfil">Perfil</string>
    <string name="menu_admin_asignar_estacionamiento">Asignar estacionamiento</string>
    <string name="menu_admin_students_active_not_active">Estudiantes activos/inactivos</string>
    <string name="menu_admin_reservar_evento">Reservar evento</string>
    <string name="menu_admin_reservar_estacionamiento">Reservar estacionamiento</string>
    <string name="menu_admin_asignar_vigilante">Asignar vigilante</string>

    <string name="title_activity_docente">docente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fulano de Tal</string>
    <string name="nav_header_subtitle">25-1234-2015</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Ver Perfil</string>
    <string name="menu_slideshow"></string>
    <string name="title_activity_vigilante_navigation_drawer">vigilanteNavigationDrawer</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_estudiantes_drawer">EstudiantesDrawer</string>

    <!-- Strings related to student register -->
    <string name="register_action">Regístrate aquí</string>
    <string name="btn_register_student">Registrar</string>
    <string name="name_register">Nombre</string>
    <string name="surname_register">Apellido</string>
    <string name="carnet_register">Carnet</string>
    <string name="num_placa_register">Número de placa</string>
    <string name="pass_register">Contraseña</string>
    <string name="pass_confirm_register">Confirmar Contraseña</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
