<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    android:focusable="true"
    tools:context=".Admin.RecerveParking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView66"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/days_admin"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spSeleccionarDias"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView67"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/teacher_admin"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSeleccionarDocenteRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/oval_white"
            android:textColor="@color/colorPrimary"
            android:text="@string/selectedTeacher" />

        <TextView
            android:id="@+id/textView68"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/estacionamiento"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSeleccionarEstacionamientoRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/oval_white"
            android:text="@string/selectedBuilding" />

        <TextView
            android:id="@+id/textView69"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/parking_lenght_admin"
            android:textSize="18sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/spCantidadHorariosRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView70"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/schedule_admin"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSeleccionarHorarioRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/oval_white"
            android:text="@string/selectedScedule" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDenegarRP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:layout_marginBottom="15dp"
                android:background="@drawable/oval_white"
                android:textColor="@color/colorPrimary"
                android:text="@string/denegar_admin" />

            <Button
                android:id="@+id/btnAceptarRP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/oval"
                android:textColor="@color/colorSecundary"
                android:text="@string/aceptar_admin" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>