<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    android:focusable="true"
    tools:context=".Admin.AssignWatchman">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textview4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/watchman_admin"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAsignarVigilante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/oval_white"
            android:textColor="@color/colorPrimary"
            android:text="@string/selectedWatchman" />

        <TextView

            android:id="@+id/tvCarnet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/parking_admin"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSeleccionarEdificio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/oval_white"
            android:textColor="@color/colorPrimary"
            android:text="@string/selectedBuilding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDenegarAW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/oval_white"
                android:text="@string/denegar_admin"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btnAceptarAW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/oval"
                android:text="@string/aceptar_admin"
                android:textColor="@color/colorSecundary" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>